--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+.start {
+  opacity: 0;
+}
+
+.end {
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.main-bg {
+  height: 300px;
+  background-image: url('./image/bg.png');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+}
+
 .App {
   text-align: center;
 }
